--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "0xb13",
   "license": "ISC",
   "devDependencies": {
+    "dotenv-webpack": "^8.1.0",
     "html-webpack-plugin": "^5.6.0",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
